feat(visibility): hide ModelEngine models per player